# OpenESS

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.example.yaml  default.nix  package.json  pyproject.toml  shell.nix  tsconfig.json
.github/workflows/: test.yml
docs/: battery-system-config.md  control.md  getting-started.md  metrics.md  pricing.md  settings.md
docs/dev/: getting started.md
dynamic_ess/: config.py  db.py  entsoe.py  entsoe_api.py  main.py  service.py  util.py  victron.py
dynamic_ess/components/: __init__.py  base.py  entsoe.py  planner.py  victron.py
dynamic_ess/database/: __init__.py  config.py  database.py  runner.py  service.py
dynamic_ess/database/migrations/: 001_initial.py
dynamic_ess/db/: __init__.py  database.py  energy_flow.py  power_flow.py  runner.py  service.py  util.py
dynamic_ess/db/migrations/: 001_initial.py  003_unix_timestamps.py  004_charge_schedule.py  005_deduplicate_vebus_energy.py  006_compression_support.py  007_unified_power_energy.py  008_migrate_vebus_energy.py  009_drop_vebus_energy.py  010_migrate_vebus_measurements.py  011_rename_pool_nodes.py  012_invert_ac_out_power.py
dynamic_ess/entsoe_api/: __init__.py  client.py  config.py  service.py
dynamic_ess/metrics/: __init__.py  coordinator.py
dynamic_ess/migrations/: 002_victron_measurements.py  __init__.py
dynamic_ess/optimizer/: __init__.py  optimizer.py  service.py
dynamic_ess/pricing/: __init__.py  client.py  service.py
dynamic_ess/scheduler/: __init__.py  optimizer.py  service.py
dynamic_ess/victron/: __init__.py  client.py  registers.py
dynamic_ess/victron_modbus/: __init__.py  client.py  config.py  modbus_client.py  registers.py  service.py
dynamic_ess/web/: app.py  cli.py  dependencies.py
dynamic_ess/web/routes/: api.py  pages.py
dynamic_ess/web/static/: app.js  chart-utils.js  cycles.js  dashboard.js  debug.js  prices.js  settings.js  style.css  utils.js
dynamic_ess/web/templates/: base.html  cycles.html  dashboard.html  debug.html  prices.html  settings.html
open_ess/: config.py  main.py  service.py  util.py
open_ess/battery_system/: __init__.py  battery_system.py  config.py
open_ess/database/: __init__.py  config.py  database.py  migration_runner.py  runner.py  service.py  util.py
open_ess/database/migrations/: 001_initial.py  002_rename_labels.py
open_ess/frontend/: README.md  __init__.py  app.py  cli.py  config.py  dependencies.py
open_ess/frontend/routes/: __init__.py  api.py  pages.py  timeseries.py  util.py
open_ess/frontend/src/: cycles.ts  dashboard.ts  debug.ts  metrics.ts  settings.ts  types.ts  utils.ts
open_ess/frontend/static/: api.js  cycles.js  dashboard.js  debug.js  metrics.js  settings.js  style.css  timeseries.js  types.js  utils.js
open_ess/frontend/templates/: base.html  cycles.html  dashboard.html  debug.html  metrics.html  settings.html
open_ess/metrics/: __init__.py  battery_config.py  coordinator.py
open_ess/optimizer/: __init__.py  optimizer.py  service.py
open_ess/pricing/: __init__.py  areas.py  client.py  config.py  formula.py  service.py  util.py
open_ess/scripts/: generate_types.py
open_ess/timeseries/: __init__.py  base.py  config.py
open_ess/timeseries/metricsqlite/: __init__.py  backend.py  config.py
open_ess/timeseries/victoriametrics/: __init__.py  backend.py  client.py  config.py  protobuf.py
open_ess/victron_modbus/: __init__.py  client.py  config.py  modbus_client.py  registers.py  service.py
open_ess/web/: app.py  cli.py
open_ess/web/routes/: api.py
open_ess/web/static/: cycles.js  dashboard.js  utils.js
open_ess/web/templates/: base.html  cycles.html  dashboard.html  prices.html  settings.html
tests/: test_optimizer.py
