[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["open_ess*"]

[tool.black]
line-length = 120


[project]
name = "open-ess"
description = "Open Energy Storage System - Charge/discharge schedule optimizer for day-ahead energy prices."
version = "0.0.0"
authors = [{ name = "David van 't Wout", email = "david@vtwout.com" }]
dependencies = [
    "entsoe-apy",
    "fastapi",
    "jinja2",
    "numpy",
    "pandas",
    "pydantic",
    "pymodbus",
    "pyomo",
    "pyyaml",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[project.scripts]
open-ess = "open_ess.main:main"
generate-types = "open_ess.scripts.generate_types:main"
