[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["open_ess*"]

[tool.setuptools.package-data]
open_ess = ["*.js", "*.html", "*.css"]

[tool.ruff]
line-length = 120
target-version = "py311"
output-format = "concise"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (unused imports, undefined names)
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (such as `l`)
    "RUF022", # __all__ sorting - alphabetical is fine
]

[tool.ruff.lint.isort]
known-first-party = ["open_ess"]

[tool.ruff.lint.per-file-ignores]
"open_ess/frontend/routes/api.py" = ["B008"]  # Query() in defaults is standard FastAPI pattern

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["entsoe", "entsoe.*", "pyomo", "pyomo.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "open_ess.frontend.routes.api"
ignore_errors = true


[project]
name = "open-ess"
description = "Open Energy Storage System - Charge/discharge schedule optimizer for day-ahead energy prices."
version = "0.0.0"
authors = [{ name = "David van 't Wout", email = "david@vtwout.com" }]
requires-python = ">=3.11"  # Because of entsoe-apy
dependencies = [
    "metricsqlite",
    "entsoe-apy",
    "fastapi",
    "jinja2",
    "numpy",
    "pandas",
    "pydantic",
    "pymodbus",
    "pyomo",
    "pyyaml",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest>=8.0", "pytest-cov", "mypy>=1.10", "ruff>=0.4", "types-PyYAML", "pandas-stubs"]

[project.scripts]
open-ess = "open_ess.main:main"
generate-types = "open_ess.scripts.generate_types:main"
